# bmin5200-final-project

./: README.md  main.ipynb  main.py  pyproject.toml  references.bib
rules/: deductive_rules_aca_module.rules.txt  deductive_rules_module_module.rules.txt  deductive_rules_module_sledai.rules.txt
tables/: significant_aca_module_correlations.tex  significant_module_SLEDAI.tex  significant_module_module_correlations.tex
